--- a/static/index.html
+++ b/static/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <img id="whale" src="whale300.png"/>
-  <div id="waves"></div>
-  <div id="sea"></div>
+  <div id="waves">test</div>
+  <div id="sea">test</div>
 </body>
 </html>
